# DIY-VR-Cardboard-Alternative

./: README.md  hand_tracker_config.json
gyrowemosudpwifi/: gyrowemosudpwifi.ino
vr-camera-driver/: .gitignore  CMakeLists.txt  MONADO_PLUS_FEATURES.md  README.md  advanced_tracking.py  calibrate_camera.py  deploy_to_steamvr.bat  hand_tracker.py  hand_tracker_config.json  hand_tracker_gui.py  run_all.bat
vr-camera-driver/driver/: CameraVRDriver.cpp  CameraVRDriver.h  VirtualController.cpp  VirtualController.h  VirtualHMD.cpp  VirtualHMD.h  controller_profile.json  driver.vrdrivermanifest
vr-camera-driver/include/: ArduinoHeadReceiver.h  CameraCapture.h  HandPoseReceiver.h  PoseEstimator.h  PoseFilter.h
vr-camera-driver/src/: ArduinoHeadReceiver.cpp  CameraCapture.cpp  HandPoseReceiver.cpp  PoseEstimator.cpp  PoseFilter.cpp  main.cpp
